fixed display overflow

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@
     text-align: right;
     padding-right: 10px;
     font-family: 'Orbitron', sans-serif;
+    overflow: hidden;
 }
 
 #display-formula {
